--- a/style.css
+++ b/style.css
@@ -1,1 +1,23 @@
+.form-control {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  background-color: #3CBC8D;
+  color:white;
+}
 
+.shorterbox {
+  width: 20%;
+  padding:12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  background-color: #3CBC8D;
+  color:white;
+}
+
+.btn btn-success {
+  margin-left: 23px;
+}
